# busterminal

./: Cargo.toml  README.md
src/: client.rs  main.rs  model.rs
src/api/: mod.rs  model.rs
src/btapi/: btapi.rs  destinationdisplay.rs  estimatedcall.rs  helpers.rs  journeypattern.rs  line.rs  mod.rs  model.rs  qyay.rs  request.rs  servicejourney.rs  stopplace.rs  stopplaceresponse.rs  wrapper.rs
src/btapi/request/: geocoder.rs  journeyplanner.rs  mod.rs  stopregister.rs
src/client/: entur_client.rs  wrapper.rs
src/utils/: mod.rs  user_input.rs
