[package]
name = "busterminal"
version = "1.1.0"
authors = ["Tri Nguyen <pub@tmn.io>"]
edition = "2021"
description = """
A simple CLI for retrieving information from public transportation system in Norway
"""
repository = "https://github.com/tmn/busterminal"
readme = "README.md"
license = "Apache-2.0 "
keywords = ["publictransportation", "transportation", "entur", "norway"]

[[bin]]
name = "busterminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
clap = { version = "4.3.19", features = ["derive"] }
chrono = "0.4.26"
http = "0.2.9"
