[package]
name = "busterminal"
version = "1.2.0"
authors = ["tmn <cava@trimn.net>"]
description = """
A simple CLI for retrieving information from public transportation system in Norway
"""
documentation = "https://github.com/tmn/busterminal"
homepage = "https://github.com/tmn/busterminal"
repository = "https://github.com/tmn/busterminal"
keywords = ["publictransportation", "transportation", "entur", "norway"]
categories = ["command-line-utilities"]
edition = "2024"
readme = "README.md"
license = "Apache-2.0 "

[[bin]]
name = "busterminal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4.42"
http = "1.3.1"
